Refs #367: fix bug on Polar Unelte table: info icon not visible

--- a/wwwbase/styles/common.css
+++ b/wwwbase/styles/common.css
@@ -113,8 +113,9 @@ blockquote {
 
 /* Unelte table, Surse table, Licențe table */
 .minimalist-table {
-  margin: 0;
+  border-collapse: collapse;
   border: 0;
+  margin: 0;
   width: 100%;
 }
 
@@ -166,5 +167,11 @@ blockquote {
 .licences .author,
 .licences .dictionary-name {
   max-width: 300px;
+}
+
+span.tooltip2 {
+  background: url("../img/icons/information.png") no-repeat;
+  display: inline-block;
+  width: 16px;
 }
 
