--- a/wwwbase/styles/polar.css
+++ b/wwwbase/styles/polar.css
@@ -822,4 +822,7 @@ pre.code {
 }
 
 
-
+/* Unelte table */
+.tools-table {
+  min-width: 1108px;
+}
