--- a/wwwbase/styles/zepu.css
+++ b/wwwbase/styles/zepu.css
@@ -1246,12 +1246,6 @@ li.widgetsPreferences {
 
 
 /* Donează page */
-span.tooltip2 {
-  background: url("../img/icons/information.png") no-repeat;
-  display: inline-block;
-  width: 16px;
-}
-
 .donateContent {
   padding: 0px 15px;
   line-height: 17px;
